# hachi-pcs

./: .gitignore  Cargo.toml  README.md  parameters.sage
src/: main.rs
src/arithmetic/: field.rs  fs.rs  mod.rs  poly.rs  poly_chal.rs  poly_mat.rs  poly_mat_ntt.rs  poly_vec.rs  poly_vec_ntt.rs  ring.rs  sumcheck.rs  utils.rs
src/hachi/: commit.rs  common.rs  mod.rs  prove.rs  setup.rs  verify.rs
src/hachi/prover_utils/: mod.rs  rq.rs  sumcheck.rs  zq_zq.rs
src/stream/: file_stream.rs  mod.rs
src/utils/: gen_file.rs  mod.rs  verbose.rs
