cargo-features = ["edition2024"]

[package]
name = "hachi"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff = "0.5.0"
ark-poly = "0.5.0"
ark-std = "0.5.0"
base64 = "0.22.1"
memmap2 = "0.9.7"
rand = "0.9.1"
rand_chacha = "0.9.0"
sha256 = "1.6.0"
tfhe-ntt = "0.6.1"
time-graph = "0.3.2"

[features]
default = ["verbose"]
verbose = []
gen_file = []
stats = []
nightly = ["tfhe-ntt/nightly"]
